Fix: Increase body padding for sticky navbar spacing
Increased padding-top from 56px to 80px to add breathing room
between the sticky navbar and page titles.

--- a/CodersGear/wwwroot/css/site.css
+++ b/CodersGear/wwwroot/css/site.css
@@ -52,5 +52,5 @@ body {
 }
 
 body {
-  padding-top: 56px; /* Add padding to account for fixed navbar */
+  padding-top: 80px; /* Add padding to account for fixed navbar + extra space for page titles */
 }
